==== Changelog.txt ====
@date: October 24, 2011

== Version 1.4 ==
* released ...
* published ...

== Code ==
* Added textdomain as needed to string functions
* Added previous and next post navigation in the `single.php` template
* Added `wp_link_pages` after every instance of `the_content`
* Removed `show_avatar` function - not used
* Removed `bns_menu` function - not used
* Removed `nona_get_page_number` function - no longer used
* Removed display of 'Featured Image' in `single.php` for aesthetic reasons
* Replaced `the_author_posts_link` (deprecated) with `get_author_posts_url`
* Updated 'BNS Dynamic Copyright' and renamed to 'NoNa Dynamic Copyright'
* Updated 'BNS Theme Version' and renamed to 'NoNa Theme Version'

== CSS ==
* `font-size` changed to base of 115% from 18px
* Changed font-sizes changed to percentage base; some additional adjustments made
* Change main background image to `GrungeOverlayTile.png` for better seamless tiling
* Change `GrungeOverlayTile.png` background property to 'body' tag and remove `#full-screen`
* Added more consistent formatting
* Added `max-width` parameter to address gallery with up to 10 columns
* Added CSS to support `editor-style`
* Removed Internet Explorer `lte IE 7` support
* Removed `head2toe` as not needed
* Removed .avatar class; not used (and conflicts with v3.3-beta1 Admin Bar)
* Removed all empty elements (except those required by WordPress guidelines)
* General clean-up with minor optimizations and additions
 
== Code & CSS ==
* Updated menu system
* Cleaned up widget code in functions.php
* Cleaned up template code eliminating unneeded code

== Miscellaneous ==
* Changed to 'new' changelog format
* Corrected Theme Name to NoNa
* Update `readme.txt` with better 'markdown'
* Update `changelog.txt` with better 'markdown'
* Add `support.txt` file

== Internet Browsers Reviewed ==
* Apple Safari v5.1.1
* Firefox v7.0.1
* Google Chrome v14.0
* Internet Explorer v9.0
* Opera v11.52

****